testsuite/tests/rename/should_fail/T10618.stderr

T10618.hs:3:22: error:
    • Variable not in scope: (<>) :: Maybe (Maybe a1) -> Maybe a0 -> t
    • Perhaps you meant one of these:
        ‘<$>’ (imported from Prelude), ‘*>’ (imported from Prelude),
        ‘<$’ (imported from Prelude)
